Fix column sizes on narrow screens

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -28,7 +28,7 @@ a,
 }
 
 
-@media screen and (max-width: 1300px) {
+@media screen and (max-width: 1400px) {
   #main-width {
     width: 90%;
   }
